adding images for README

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .vs/Sobel Operator/v17/Browse.VC.opendb
 .vs/Sobel Operator/v17/Browse.VC.opendb
 .vs/Sobel Operator/v17/.suo
+.vs/Sobel Operator/v17/.suo
